.dev-workstream/fails/batch-20-keyed-topics/commit-2/tests/CycloneDDS.Runtime.Tests/Gen/CompositeKeyMessage.idl
// Auto-generated IDL for CompositeKeyMessage by CycloneDDS C# Bindings
// Generated on: 2026-01-20 08:33:46 UTC
#ifndef _CYCLONEDDS_GENERATED_COMPOSITEKEYMESSAGE_IDL_
#define _CYCLONEDDS_GENERATED_COMPOSITEKEYMESSAGE_IDL_

module CycloneDDS {
    module Runtime {
        module Tests {
            @appendable
            struct CompositeKeyMessage {
                @key int32 part1;
                @key int32 part2;
                @key string part3;
                double value;
            };

        };
    };
};

#endif // _CYCLONEDDS_GENERATED_COMPOSITEKEYMESSAGE_IDL_
